--- a/project-1/index 2.html
+++ b/project-1/index 2.html
@@ -22,8 +22,8 @@
   <div>
     <h1>Projects</h1>
     <h2>Project 1: HyperNarrative</h2>
-    <a href="">Concept</a><br />
-    <a href="">Final: Lorem Ipsum</a>
+    <a href="concept.html">Concept</a><br />
+    <a href="project 1.html">Final: My Roots, My Future</a>
     <h2>Project 2: Algorithmic Pattern and Sound</h2>
     <a href="">Final: Lorem Ipsum</a>
     <h2>Project 3: Networked Justice</h2>
