--- a/project-1/door.html
+++ b/project-1/door.html
@@ -5,13 +5,29 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, inital-scale=1">
     <title>My Roots, My Future</title>
+
+   
 </head>
 
 <body>
-    <h1> "poem" </h1>
-    <a href="firststage.html">...
-        
-    </a>
+    <body style="background-color: black;">
+
+    <h1 style ="color:white; font-family: verdana"> First Stage: Me as Isa </h1>
+    <p style = "color:white; font-family:verdana"> I was young when I first heard that sound </p>
+    <p style = "color:white; font-family:verdana" >The sound that comes from a human’s soul when they lose someone close to them</p>
+    <p style = "color:white; font-family:verdana">At first I didn’t know why my mom was screaming because as the young child I was,</p> 
+    <p style = "color:white; font-family:verdana">I didn’t understand that my father had just died</p>
+    <p style = "color:white; font-family:verdana"> In fact, I remember a few days after his death, running up to his office door and knocking, wondering when he was gonna
+    finally let me in so I could see him</p>
+    <p style = "color: white; font-family:verdana">I was knocking, and knocking, and knocking </p>
+    <p style = "color:white; font-family:verdana">And <a href=firststage.html> knocking</a> </p></a>
+   <p style = "color:white; font-family:verdana"> It was to no avail.</p>
+  <p style = "color:white; font-family:verdana"> He never opened the door.</p>
+  <p style = "color:white; font-family:verdana">He never came <a href = secondstage.html> back. </a> </p> </a> 
+    
+   
+</p>
+
 
 </body>
 
