--- a/project-1/girl.html
+++ b/project-1/girl.html
@@ -5,14 +5,47 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, inital-scale=1">
     <title>My Roots, My Future</title>
+
+<style>
+        .flower {
+                position: absolute;
+                top: 300px;
+                left: 350px;
+        }
+</style>
+
 </head>
 
 <body>
-    <h1> "poem" </h1>
-    <a href="secondstage.html">...
 
-    </a>
+    <body style="background-color: black;">
 
-</body>
+        <h1 style="color:white; font-family: verdana"> Second Stage: Me as Isabelle </h1>
+        <p style="color:white; font-family:verdana"> I am my father’s daughter </p>
+        <p style="color:white; font-family:verdana">My Nigerian nose, my coiled hair, my brown skin
+</p>
+        <p style="color:white; font-family:verdana">It itches me to think that there were days when I was ashamed of this
+,</p>
+        <p style="color:white; font-family:verdana">I do, however, remember where that shame came from
+</p>
+        <p style="color:white; font-family:verdana"> I was on the bus with my white schoolmates and I could hear people laughing at me,
+        Mocking me
+</p>
+        <p style="color:white; font-family:verdana">It was when my face turned red, that I remembered my skin was brown yet transparent and opaque
+ </p>
+        <p style="color: white; font-family:verdana">They all noticed my embarrassment and they laughed, they mocked, and they mocked, and they <a href=secondstage.html>mocked</a> </p> </a> 
+        
+
+        <p style="color:white; font-family:verdana"> It was my hair.</p>
+        <p style="color:white; font-family:verdana"> That day was the first time I let my natural hair down.</p>
+        <p style="color:white; font-family:verdana">They were laughing at my <a href=thirdstage.html> hair. </a> </p> </a>
+
+
+        </p>
+
+<img src="secondstage.gif" width="1425" height="1100" frameBorder="0" class="giphy-embed" allowFullScreen></iframe
+        class="flower">
+    </body>
+
 
 </html>
