--- a/project-1/project 1.html
+++ b/project-1/project 1.html
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
-<html>
-  <head>
-<meta charset="utf-8">
-<meta name= "viewport" content="width=device-width, inital-scale=1">
-<title>My Roots, My Future</title>
-  </head>
-  <body>
-      <h1> My Roots, My Future</h1>
-      <a href="firststage.html">
-    <img src="project1image.jpg">
-      </a>
+<html lang="en">
 
-  </body>
+
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Roots, My Future</title>
+  <style>
+    img.stretchy {
+      width: 100%;
+
+    }
+
+    .container {
+      width: 100%;
+    }
+
+
+    p {
+      position: absolute;
+      left: 205px;
+      bottom: -310px
+    }
+  </style>
+</head>
+
+
+<body>
+  <a href="firststage.html">
+    <p> My Roots, My Future</p>
+  </a>
+  <div class="container">
+    <img src="mainpage6.jpg" alt="scene" class="stretchy" />
+  </div>
+</body>
+
 </html>
