--- a/project-1/thirdstage.html
+++ b/project-1/thirdstage.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html>
 
@@ -5,16 +7,56 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, inital-scale=1">
     <title>4</title>
-</head>
+    <style>
+        h1 {
+            text-align: center
+        }
+
+
+        .center {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 50%;
+
+
+
+
+        }
+
+        .white {
+            position: relative;
+            top: 0;
+            left: 0;
+        }
+
+        .purple {
+            position: absolute;
+            top: 8px;
+            left: 7 px;
+        }
+    </style>
 
 <body>
-    <h1> 4</h1>
-    <a href="fourthstage.html">
-        <img src="thirdstage.jpg">
-    </a>
-    <a href="depressed.html"> At 16, her mental health ate away at her.
 
-    </a>
+    <body style="background-color: rgb(8, 8, 26);">
+
+        
+
+
+
+        <p>
+
+        <div style="position: relative; left: 0; top: 0;">
+          
+            <a href="depressed.html"> <img src="thridstage1.jpg" width="1424" height="1000" class="purple" /></a>
+
+    </body>
+
+</html>
+
+<body>
+
 
 </body>
 
