--- a/project-1/depressed.html
+++ b/project-1/depressed.html
@@ -5,14 +5,61 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, inital-scale=1">
     <title>My Roots, My Future</title>
+
+
+<style>
+    .flowers {
+        position: absolute;
+        top: 300px;
+        left: 350px;
+    }
+</style>
+
 </head>
 
 <body>
-    <h1> "poem" </h1>
-    <a href="thirdstage.html">...
 
-    </a>
+    <body style="background-color: black;">
 
-</body>
+        <h1 style="color:white; font-family: verdana"> Third Stage: Me as Isabelle Analo </h1>
+        <p style="color:white; font-family:verdana"> I’m not sure when I had my first panic attack
+ </p>
+        <p style="color:white; font-family:verdana">I just know it attacked My being
+        </p>
+        <p style="color:white; font-family:verdana">My body and My mind
+
+            </p>
+        <p style="color:white; font-family:verdana">I remember during one episode, being on my knees and almost begging for some type of help
+
+        </p>
+        <p style="color:white; font-family:verdana"> Some type of savior
+
+        </p>
+        <p style="color:white; font-family:verdana">I didn’t know who or what to look to
+
+        </p>
+        <p style="color:white; font-family:verdana">So I started going deep
+        </p>
+        <p style="color:white; font-family:verdana"> I went back to Nigeria
+</p>
+        <p style="color: white ; font-family:verdana">And I found my <a href=thirdstage.html>roots </a> </p></a>
+        <p style="color:white; font-family:verdana">I started researching Nigerian spirituality-
+ </p>
+        <p style="color:white; font-family:verdana">About the gods and goddesses of my motherland
+ </p>
+<p style="color:white; font-family:verdana">I started seeing myself in them
+
+</p>
+        <p style="color:white; font-family:verdana">And It eased something in <a href=fourthstage.html> me. </a> </p>
+        </a>
+
+
+        </p>
+
+<img src="final stage.gif" width="1425" height="400" frameBorder="0" class="giphy-embed" allowFullScreen></iframe
+    class="flowers">
+
+    </body>
+
 
 </html>
