--- a/project-1/found.html
+++ b/project-1/found.html
@@ -5,14 +5,47 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, inital-scale=1">
     <title>My Roots, My Future</title>
+
+<style>
+        .flowerss {
+                position: absolute;
+                top: 300px;
+                left: 350px;
+        }
+</style>
+
 </head>
 
 <body>
-    <h1> "poem" </h1>
-    <a href="fourthstage.html">...
 
-    </a>
+    <body style="background-color: black;">
 
-</body>
+        <h1 style="color:white; font-family: verdana"> Fourth Stage: Me as Isabelle Otito Analo </h1>
+        <p style="color:white; font-family:verdana"> Now, in this moment </p>
+        <p style="color:white; font-family:verdana">I see myself as an emerging deity -
+</p>
+        <p style="color:white; font-family:verdana">Soon to be like my friends, Ala, Chukwu, and Oshun
+</p>
+        <p style="color:white; font-family:verdana">I still remember the different girls I was before though and I wish I could tell them…
+</p>
+        <p style="color:white; font-family:verdana"> According to Nigerian spirituality, your father is still very much alive. He’s thriving but just in another form of
+        existence</p>
+        <p style="color:white; font-family:verdana">According to Nigerian spirituality, your hair, your being, and your body is divine and sacred
+ </p>
+        <p style="color:white; font-family:verdana">According to Nigerian spirituality, you are not your emotions
+        
+</p>
+<p style="color:white; font-family:verdana"> Your anxiety nor your panic attacks
+</p>
+        <p style="color:white; font-family:verdana"> You are Isabelle Otito <a href=fourthstage.html>Analo. </a></p></a>
+       
+        <p style="color:white; font-family:verdana">You are your father’s <a href= projectlove.html> daughter. </a> </p> </a>
 
-</html>
+
+        </p>
+<img src="flower-bloom.gif" width="1425" height="400" frameBorder="0" class="giphy-embed" allowFullScreen></iframe
+        class="flowerss">
+
+    </body>
+
+    </html>
