--- a/project-1/fourthstage.html
+++ b/project-1/fourthstage.html
@@ -1,21 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, inital-scale=1">
-    <title>4</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Roots, My Future</title>
+    <style>
+        img.stretchy {
+            width: 100%;
+
+        }
+
+        .container {
+            width: 100%;
+        }
+
+
+        p {
+            position: absolute;
+            left: 205px;
+            bottom: -310px
+        }
+    </style>
 </head>
 
+
 <body>
-    <h1> 4</h1>
-    <a href="home.html">
-        <img src="fourthstage.jpg">
+    <a href="found.html">
+        <p> Isabelle Otito Analo </p>
     </a>
-    <a href="found.html"> At 18, she has found her roots and looks forward!
-
-    </a>
-
+    <div class="container">
+        <img src="mainpage51-2.jpg" alt="scene" class="stretchy" />
+    </div>
 </body>
 
 </html>
