--- a/project-1/index.html
+++ b/project-1/index.html
@@ -4,19 +4,31 @@
 <head>
     <meta charset="UTF-8" />
     <title>Isabelle's homepage</title>
-    <!--Update with your name-->
+   
+  
+  
 </head>
 
 <body>
+   
+
+
+    <body style="background-color:blue;"></body>
     <div>
         <h1>Isabelle Otito Analo</h1>
         <!--Update with your name-->
-        <p>This is my website for <i>IML300 class</i>. A little bit about me.</p>
+        <p>This is my website for <i>IML300 class</i>. Isabelle Analo is a Nigerian American multimedia visual artist based in Pittsburgh.</p>
+        <p>Exploring themes of Black youth and Afrofuturism, her work aims to create a physical representation of the dreams of
+        young black kids everywhere. </p>
+        <p>Analo is proficient in Adobe photoshop, lightroom, bridge, illustrator, and premier, as well as Blender.
+      </p>
+      <p> She is also skilled in graphic design, photography, and cinematography.
+</p>
     </div>
 
     <div>
         <h1>Presentation</h1>
-        <a href="">Pecha Kucha: Lorem Ipsum</a>
+        <a href="">Pecha Kucha: AFROTECHTOPIA </a>
     </div>
 
     <div>
@@ -25,7 +37,8 @@
         <a href="concept.html">Concept</a><br />
         <a href="project 1.html">Final: My Roots, My Future</a>
         <h2>Project 2: Algorithmic Pattern and Sound</h2>
-        <a href="">Final: Lorem Ipsum</a>
+        <a href="concept2.html">Concept</a><br />
+        <a href="https://editor.p5js.org/analo/sketches/7GPMIfOjE"> <iframe src="https://preview.p5js.org/analo/embed/7GPMIfOjE"></iframe> Final: The Playlist of an Afrofuturist Girl</a>
         <h2>Project 3: Networked Justice</h2>
         <a href="">Final: Lorem Ipsum</a>
     </div>
@@ -33,9 +46,12 @@
     <div>
         <h1>Exercises</h1>
         <ul>
-            <li><a href="">p5.js sketch 1</a></li>
-            <li><a href="">p5.js sketch 2</a></li>
-            <li><a href="">p5.js sketch 3</a></li>
+            <li><a href="https://editor.p5js.org/analo/sketches/rqSSHqMwF"> <iframe src="https://preview.p5js.org/analo/embed/rqSSHqMwF"></iframe> p5.js sketch 1</a></li>
+            <li><a href="https://editor.p5js.org/analo/sketches/vUYcEmUOn"><iframe src="https://preview.p5js.org/analo/embed/vUYcEmUOn"></iframe> p5.js sketch 2</a></li>
+            <li><a href="https://editor.p5js.org/analo/sketches/AA1EPvWnl"><iframe src="https://preview.p5js.org/analo/embed/AA1EPvWnl"></iframe> p5.js sketch 3</a></li>
+            <li><a href="https://editor.p5js.org/analo/sketches/oYptHIH6j"> <iframe src="https://preview.p5js.org/analo/embed/oYptHIH6j"></iframe>p5.js sketch 3</a></li>
+            <li><a href="https://editor.p5js.org/analo/sketches/8i_F_0GnO"> <iframe src="https://preview.p5js.org/analo/embed/8i_F_0GnO"></iframe> p5.js sketch 3</a></li>
+            
         </ul>
     </div>
 
