--- a/project-1/concept.html
+++ b/project-1/concept.html
@@ -6,13 +6,20 @@
     <meta name="viewport" content="width=device-width, inital-scale=1">
     <title>My Roots, My Future</title>
 
-    <h1>Concept</h1>
+    <h1 style= "color: whitesmoke;font-family:Courier New;text-align:center;">Concept</h1>
 
 
     </head>
 
-    <body>
-<p> The purpose of my project is to illustrate how finding my Nigerian roots and Nigerian spirituality helped me grow into
+    <style>
+        p {
+            padding-left: 50px;
+            padding-right: 50px;
+        }
+    </style>
+
+    <body style="background-color:black;">
+<p style="color: whitesmoke;font-family:Courier New;"> The purpose of my project is to illustrate how finding my Nigerian roots and Nigerian spirituality helped me grow into
 the woman I am today. The primary page of the website will showcase me at different stages in my life, as a young girl
 confused about her dad’s death, as a middle schooler insecure in her blackness, as a high schooler struggling with
 mental illness, and finally as a college student beginning to accept herself. As the audience goes through each stage,
