--- a/project-1/concept2.html
+++ b/project-1/concept2.html
@@ -6,24 +6,19 @@
     <meta name="viewport" content="width=device-width, inital-scale=1">
     <title>My Roots, My Future</title>
 
-    <h1>Concept</h1>
+    <h1 style="color: whitesmoke;font-family:Courier New;text-align:center;">Concept</h1>
 
 
 </head>
 
-<body>
-    <p> The purpose of my project and the series of my excercises is to illustrate the many facets of blackness and the black experience
-        with an emphasis on Afrofuturism.
-         The primary page of the website will showcase me at different stages in my life, as a
-        young girl
-        confused about her dad’s death, as a middle schooler insecure in her blackness, as a high schooler struggling
-        with
-        mental illness, and finally as a college student beginning to accept herself. As the audience goes through each
-        stage,
-        they’ll be met with two links within a poem. One of the links moves the audience back into the past, while the
-        other
-        link will move the audience forward and into the future. By the end of the website, the audience will be able to
-        see and
-        understand the full circle journey created by the hypernarrative. </p>
+<style>
+    p {
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+</style>
+
+<body style="background-color:black;">
+    <p style="color: whitesmoke;font-family:Courier New;"> "The Playlist of Afrofututrursit girl shows a content black girl submerged and floating in space. The music associated with the playlist contains Afrofutruist themes such as divine Black femininity, Black power and Black Influence. This project was made as a safe space for young Black people to celebrate their Blackness and dream of a better now and a better future. </p>
 
 </body>
